--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Blog"
+title: ""
 ---
 
 Proposal, Communication & Marketing Specialist | Passionate about Technology & Innovation
