--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Ian Hicks Resume 2023/title>
-</head>
+---
+title: Ian Hicks Resume 2023
+layout: page
+---
 <body>
     <embed src="/Ian Hicks Resume 2023 ATS.pdf" width="100%" height="800px" type="application/pdf">
 </body>
