--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,4 @@
 title: Ian Hicks Resume 2023
 layout: page
 ---
-<body>
-    <embed src="/Ian Hicks Resume 2023 ATS.pdf" width="100%" height="800px" type="application/pdf">
-</body>
-
+[Resume](/Ian Hicks Resume 2023 ATS.pdf)
