--- a/resume.html
+++ b/resume.html
@@ -2,4 +2,4 @@
 title: Ian Hicks Resume 2023
 layout: page
 ---
-[Resume](/Ian Hicks Resume 2023 ATS.pdf)
+my 2023 <a href="/Ian Hicks Resume 2020 ATS.pdf">Resume</a>
