--- a/resume.html
+++ b/resume.html
@@ -2,4 +2,4 @@
 title: Ian Hicks Resume 2023
 layout: page
 ---
-my 2023 <a href="//Ian%20Hicks%20Resume%202023%20ATS.pdf">Resume</a>
+my 2023 <a href="/IanHicksResumeSG.html">Resume</a>
